--- a/transform/package.json
+++ b/transform/package.json
@@ -13,8 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "glob": "^7.1.6",
+    "mdast-util-to-string": "^1.1.0",
+    "remark-container": "^0.1.2",
+    "remark-containers": "^1.2.0",
+    "remark-generic-extensions": "^1.4.0",
     "remark-parse": "^8.0.3",
+    "remark-shortcodes": "^0.3.1",
     "unified": "^9.2.0",
+    "unist-util-flat-filter": "^1.0.0",
+    "unist-util-visit": "^2.0.3",
     "yargs": "^16.0.3"
   }
 }
